# NeoMind-Extensions

./: .gitignore  CLAUDE.md  CODE_VERIFICATION_REPORT.md  Cargo.toml  DEPLOYMENT.md  DOCS.md  EXTENSION_FRONTEND_DESIGN_GUIDE.md  EXTENSION_GUIDE.md  EXTENSION_GUIDE.zh.md  EXTENSION_ISSUES_REPORT.md  FRONTEND_DESIGN_SPEC.md  LICENSE  Makefile  QUICKSTART.md  README.md  README.zh.md  SCRIPTS.md  USER_GUIDE.md  USER_GUIDE.zh.md  build-dev.sh  build-package.sh  build.sh  release.sh
.github/workflows/: asm-release.yml  build-extension.yml  build-native-extensions.yml  build-nep-packages.yml  release.yml  wasm-release.yml
.serena/: .gitignore  project.yml
docs/superpowers/plans/: 2026-03-26-ocr-device-inference.md  2026-04-21-yolo-video-stream-fetch.md  2026-05-09-uink-display-editor.md
docs/superpowers/specs/: 2026-03-26-ocr-device-inference-design.md  2026-04-21-yolo-video-stream-fetch-design.md  2026-05-09-uink-display-editor-design.md
extensions/: index.json
extensions/as-hello/: README.md  README.zh.md  asconfig.json  metadata.json  package.json
extensions/as-hello/assembly/: extension.ts
extensions/face-recognition/: Cargo.toml  README.md  metadata.json
extensions/face-recognition/frontend/: frontend.json  jest.config.js  package.json  tsconfig.jest.json  vite.config.ts
extensions/face-recognition/frontend/src/: FaceRegistrationCard.tsx  index.tsx
extensions/face-recognition/frontend/src/__tests__/: FaceRecognitionCard.test.tsx  FaceRegistrationCard.test.tsx
extensions/face-recognition/src/: alignment.rs  commands.rs  config.rs  database.rs  detector.rs  drawing.rs  lib.rs  onnx_utils.rs  pipeline.rs  recognizer.rs  types.rs
extensions/face-recognition/tests/: integration_test.rs  mock_test.rs
extensions/image-analyzer/: Cargo.toml  metadata.json
extensions/image-analyzer-v2/: Cargo.toml  README.md  metadata.json
extensions/image-analyzer-v2/frontend/: README.md  frontend.json  package.json  vite.config.ts
extensions/image-analyzer-v2/frontend/src/: index.tsx
extensions/image-analyzer-v2/src/: lib.rs
extensions/image-analyzer-v2/tests/: extension_test.rs
extensions/image-analyzer/src/: lib.rs
extensions/ocr-device-inference/: Cargo.toml  README.md  download_models.sh  metadata.json
extensions/ocr-device-inference/frontend/: frontend.json  package.json  vite.config.ts
extensions/ocr-device-inference/frontend/src/: OcrDeviceCard.tsx  index.tsx
extensions/ocr-device-inference/models/: en_dict.txt  vocab.txt
extensions/ocr-device-inference/src/: lib.rs
extensions/stream-player/: Cargo.toml  README.md  metadata.json
extensions/stream-player/frontend/: frontend.json  package.json  vite.config.ts
extensions/stream-player/frontend/src/: index.tsx  jsmpeg.ts
extensions/stream-player/src/: lib.rs
extensions/template/: Cargo.toml  README.md  metadata.json
extensions/template/src/: lib.rs
extensions/uink-rms-bridge/: Cargo.toml  README.md  metadata.json
extensions/uink-rms-bridge/frontend/: frontend.json  package.json  vite.config.ts
extensions/uink-rms-bridge/frontend/src/: Canvas.tsx  DisplayEditorCard.tsx  EditModal.tsx  api.ts  index.tsx  styles.ts
extensions/uink-rms-bridge/src/: lib.rs
extensions/wasm-demo/: Cargo.toml  README.md  build.sh  metadata.json
extensions/wasm-demo/src/: lib.rs
extensions/wasm-demo/tests/: extension_test.rs
extensions/weather-forecast/: Cargo.toml  README.md  manifest.json  metadata.json  weather_forecast_wasm.wasm
extensions/weather-forecast-v2/: Cargo.toml  README.md  metadata.json
extensions/weather-forecast-v2/frontend/: README.md  frontend.json  package.json  vite.config.ts
extensions/weather-forecast-v2/frontend/src/: index.tsx
extensions/weather-forecast-v2/src/: lib.rs
extensions/weather-forecast-v2/tests/: extension_test.rs
extensions/weather-forecast/src/: lib.rs
extensions/yolo-device-inference/: Cargo.toml  README.md  metadata.json
extensions/yolo-device-inference/frontend/: frontend.json  package.json  vite.config.ts
extensions/yolo-device-inference/frontend/src/: DeviceBindingCard.tsx  index.tsx
extensions/yolo-device-inference/src/: lib.rs
extensions/yolo-device-inference/tests/: extension_test.rs
extensions/yolo-video/: Cargo.toml  metadata.json
extensions/yolo-video-v2/: Cargo.toml  Cargo_test.toml  README.md  manifest.json  metadata.json  test_memory.sh
extensions/yolo-video-v2/examples/: memory_test.rs
extensions/yolo-video-v2/frontend/: README.md  frontend.json  package.json  vite.config.ts
extensions/yolo-video-v2/frontend/src/: index.tsx
extensions/yolo-video-v2/src/: detector.rs  lib.rs  video_source.rs
extensions/yolo-video-v2/tests/: integration_test.rs  unit_test.rs
extensions/yolo-video/src/: lib.rs
neomind-ext/: .gitignore  Cargo.toml  QUICKSTART.md  README.md
neomind-ext/src/: main.rs
neomind-ext/templates/basic/: Cargo.toml  lib.rs
neomind-ext/templates/basic/src/: lib.rs
scripts/: generate-json.ts  test_nep.py  update-versions.sh
skill/: GIT_COMMIT_CHECKLIST.md  GUIDE.md  QUICK_START.md  README.md  README.zh.md  SKILL_INTEGRATION_COMPLETE.md
skill/neomind-extension/: README.md  SKILL.md
skill/neomind-extension/examples/: simple-counter.md
skill/neomind-extension/reference/: architecture.md  event-subscription.md  frontend.md
src/: lib.rs
