[workspace]
resolver = "2"
members = [
    # Extensions targeting the isolated NeoMind runtime protocol
    "extensions/weather-forecast-v2",
    "extensions/image-analyzer-v2",
    "extensions/yolo-video-v2",
    "extensions/yolo-device-inference",
    "extensions/wasm-demo",
    # "extensions/final-test",
    # "extensions/cli-test-ext",
]
exclude = [
    "extensions/as-hello",              # AssemblyScript project (not Rust)
    "extensions/test-dashboard-component",  # Frontend-only component (not Rust)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeoMind"]
license = "MIT"

[workspace.dependencies]
# Minimal dependencies for WASM extensions
serde = { version = "1.0", features = ["derive"] }
# IMPORTANT: preserve_order feature is required for ABI compatibility between
# extension-runner and extension binaries. This ensures serde_json::Value uses
# IndexMap instead of HashMap, which has a stable memory layout across versions.
serde_json = { version = "1.0", features = ["preserve_order"] }
urlencoding = "2.1"
thiserror = "2.0"
async-trait = "0.1"

# Use crates.io version for ABI isolation
# When SDK is published, extensions don't need to recompile when main project updates
neomind-extension-sdk = "0.6"

# Note: For local development, you can temporarily use path dependency:
# neomind-extension-sdk = { path = "../NeoMind/crates/neomind-extension-sdk" }

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling

[profile.dev]
opt-level = 1
lto = false
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling
