[workspace]
resolver = "2"
members = [
    # Extensions targeting the isolated NeoMind runtime protocol
    "extensions/weather-forecast-v2",
    "extensions/image-analyzer-v2",
    "extensions/yolo-video-v2",
    "extensions/yolo-device-inference",
    "extensions/ocr-device-inference",
    "extensions/face-recognition",
    "extensions/wasm-demo",
    # "extensions/final-test",
    # "extensions/cli-test-ext",
]
exclude = [
    "extensions/as-hello",              # AssemblyScript project (not Rust)
    "extensions/test-dashboard-component",  # Frontend-only component (not Rust)
]

[workspace.package]
version = "2.5.0"
edition = "2021"
authors = ["NeoMind"]
license = "MIT"

[workspace.dependencies]
# Minimal dependencies for WASM extensions
serde = { version = "1.0", features = ["derive"] }
# IMPORTANT: preserve_order feature is required for ABI compatibility between
# extension-runner and extension binaries. This ensures serde_json::Value uses
# IndexMap instead of HashMap, which has a stable memory layout across versions.
serde_json = { version = "1.0", features = ["preserve_order"] }
urlencoding = "2.1"
thiserror = "2.0"
async-trait = "0.1"

# ONNX Runtime - ort 2.0.0-rc.10 requires ORT 1.22.x (ORT_API_VERSION=22)
# usls 0.1.11 pins ort = "=2.0.0-rc.10"
# Use load-dynamic: ORT is loaded at runtime from bundled dylib/so/dll
ort = { version = "2.0.0-rc.10", default-features = false, features = ["half", "load-dynamic"] }

ndarray = "0.16"

neomind-extension-sdk = "0.6.2"

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling

[profile.dev]
opt-level = 1
lto = false
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling
