[package]
name = "neomind-ext"
version = "0.1.0"
edition = "2021"
description = "CLI tool for developing NeoMind extensions"
authors = ["NeoMind Contributors"]
license = "MIT"
repository = "https://github.com/camthink-ai/NeoMind-Extension"

[[bin]]
name = "neomind-ext"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
