[package]
name = "neomind-ext"
version = "0.1.0"
edition = "2021"
description = "CLI tool for developing NeoMind extensions"
authors = ["NeoMind Contributors"]
license = "MIT"
repository = "https://github.com/camthink-ai/NeoMind-Extension"

[workspace]
# Prevent this from being included in parent workspace

[[bin]]
name = "neomind-ext"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
