[package]
name = "image-analyzer-v2"
version = "2.4.5"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "Image analysis extension using YOLOv8"

[lib]
name = "neomind_extension_image_analyzer_v2"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
semver = "1"
base64 = "0.22"
image = "0.25"
ndarray = "0.17"
parking_lot = "0.12"
tracing = "0.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
ort = { workspace = true }
usls = { version = "0.1.11", default-features = false, features = ["yolo", "ort-load-dynamic"] }
reqwest = { version = "0.12", features = ["blocking"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
js-sys = "0.3"

[features]
default = []
native = []
wasm = []
