[package]
name = "neomind-image-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stateless image analysis extension for NeoMind"
publish = false

[lib]
name = "neomind_extension_image_analyzer"
crate-type = ["cdylib"]

[dependencies]
neomind-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
