[package]
name = "stream-player"
version = "2.6.0"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "Universal video player supporting RTSP, RTMP, HLS, local files via FFmpeg transcoding and JSMpeg canvas rendering"

[lib]
name = "neomind_extension_stream_player"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4"
semver = "1"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
once_cell = "1.19"

image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
ffmpeg-next = { version = "7", default-features = false, features = ["codec", "format", "software-scaling"] }

[features]
default = []
native = []
wasm = []
