[package]
name = "wasm-demo"
version = "2.4.12"
edition = "2021"
authors = ["NeoMind Team"]
license = "MIT"
description = "Demo WASM extension for the NeoMind extension runtime"

[lib]
name = "neomind_extension_wasm_demo"
crate-type = ["cdylib", "rlib"]

[dependencies]
# SDK - provides Extension trait and export macro
neomind-extension-sdk = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
semver = "1"

# Native-only dependencies (for testing)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

# WASM requires panic = abort
