[package]
name = "wasm-demo"
version = "2.6.0"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "WASM sandbox demo extension showcasing NeoMind extension SDK capabilities with counter, greeting, and echo commands"

[lib]
name = "neomind_extension_wasm_demo"
crate-type = ["cdylib", "rlib"]

[dependencies]
# SDK - provides Extension trait and export macro
neomind-extension-sdk = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
semver = "1"

# Native-only dependencies (for testing)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

# WASM requires panic = abort
