[package]
name = "weather-forecast-v2"
version = "2.4.18"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "Weather forecast extension for the NeoMind isolated runtime"

[lib]
name = "neomind_extension_weather_forecast_v2"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
async-trait = "0.1"
chrono = "0.4"

# Use sync HTTP client to avoid Tokio runtime issues in dynamic libraries
ureq = { version = "2", features = ["json"] }

# Tokio is required by SDK's FFI macro (for RwLock wrapper)
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = []
native = []
wasm = []
