[package]
name = "neomind-yolo-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stateful video stream processing with YOLO object detection"
publish = false

[lib]
name = "neomind_extension_yolo_video"
crate-type = ["cdylib"]

[dependencies]
neomind-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
