[package]
name = "neomind_extension_{{EXTENSION_NAME}}"
version = "1.0.0"
edition = "2021"

[lib]
name = "neomind_extension_{{EXTENSION_NAME}}"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { path = "../../../NeoMind/crates/neomind-extension-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
semver = "1"

[profile.release]
panic = "unwind"  # Required for safety!
opt-level = 3
lto = "thin"
