[package]
name = "neomind_extension_{{EXTENSION_NAME_UNDERSCORED}}"
version = "1.0.0"
edition = "2021"
authors = ["{{EXTENSION_AUTHOR}}"]
license = "MIT"
description = "{{EXTENSION_DESCRIPTION}}"

[lib]
name = "neomind_extension_{{EXTENSION_NAME_UNDERSCORED}}"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { path = "../../../NeoMind/crates/neomind-extension-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
semver = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
panic = "unwind"  # Required for safety!
opt-level = 3
lto = "thin"
